--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
 body{
-	
+	font-family: "Source Sans Pro Regular";
+	background: #f2f2f2;
+	padding: 0;
+	margin: 0;
+}
+.form{
+	position: relative;
+	background: #fff;
+	padding: 20px;
+	display: block;
+	width: 60%;
+	margin: auto;
+}
+h1{
+	text-align: center;
+	position: relative;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+table{
+	margin:auto;
+	margin-bottom: 50px;
+}
+table input{
+	height: 30px;
+	width: 300px;
+	margin-bottom: 5px;
+	border-radius: 4px;
+	border: 1px solid #575757;
+}
+.td1{
+	width: 200px;
+}
+button{
+	height: 40px;
+	width: 145px;
+	margin-right: 10px;
+	margin-top: 20px;
+	border-radius: 4px;
+	border:1px solid #575757;
 }
