--- a/style.css
+++ b/style.css
@@ -4,20 +4,25 @@ body{
 	padding: 0;
 	margin: 0;
 }
+.formulaire{
+	margin: auto;
+	width: 60%;
+}
+.titre{
+	margin: auto;
+	text-align: center;
+	background: #3498db;
+	padding: 0;
+	color: white;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
 .form{
 	position: relative;
 	background: #fff;
 	padding: 20px;
 	display: block;
-	width: 60%;
 	margin: auto;
-}
-h1{
-	text-align: center;
-	position: relative;
-	margin: auto;
-	margin-top: 50px;
-	margin-bottom: 50px;
 }
 table{
 	margin:auto;
