--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body{
 	margin: auto;
 	width: 60%;
 }
+.formulaire p{
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
 .titre{
 	margin: auto;
 	text-align: center;
@@ -23,8 +27,9 @@ body{
 	padding: 20px;
 	display: block;
 	margin: auto;
+	margin-bottom: 50px;
 }
-table{
+.table1{
 	margin:auto;
 	margin-bottom: 50px;
 }
@@ -45,4 +50,13 @@ button{
 	margin-top: 20px;
 	border-radius: 4px;
 	border:1px solid #575757;
+}
+.new-id{
+	position: relative;
+	background: #fff;
+	padding: 20px;
+	display: block;
+	margin: auto;
+	border-radius: 10px;
+	box-shadow: 0px 4px 10px #d1d1d1;
 }
