--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ body{
 .formulaire p{
 	margin-top: 20px;
 	margin-bottom: 30px;
+	font-size:18px;
+	font-weight: bold;
 }
 .titre{
 	margin: auto;
-	text-align: center;
 	background: #3498db;
-	padding: 0;
+	padding-left: 30px;
 	color: white;
 	padding-top: 30px;
 	padding-bottom: 30px;
@@ -39,6 +40,8 @@ table input{
 	margin-bottom: 5px;
 	border-radius: 4px;
 	border: 1px solid #575757;
+	padding-left: 10px;
+	overflow: none;
 }
 .td1{
 	width: 200px;
@@ -49,7 +52,14 @@ button{
 	margin-right: 10px;
 	margin-top: 20px;
 	border-radius: 4px;
-	border:1px solid #575757;
+	border:none;
+	cursor: pointer;
+	background: #3498db;
+	font-weight: bold;
+	color: white;
+}
+button:hover{
+	background: #2980b9;
 }
 .new-id{
 	position: relative;
